2012-06-24  Araki Ken  <arakiken@users.sf.net>

	* x.h, x_win32.h: XK_FMAX is added. XK_F25 ... XK_F35 macros are removed in win32.

	* x_screen.c: If x_window_get_modifier_mapping() returns NULL,
	  is_alt is set by (state & ModMask).

	* ml_vt100_parser.[ch], x_screen.[ch]: CSI[>4;2m and CSI[>4;0m (enable and
	  disable modifyOtherKeys) are partially supported.
	  (Note that sequence from terminal is CSI [<code>;<mod>u,
	   not CSI [27;<mod>;<code>~.)

2012-06-24  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Duplicated code is removed.

	* x_screen.c, x_window.c: Minor fixes related to GraphicsExpose.

2012-06-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: CSI Ps SP q (0 <= Ps <= 2) is supported.

2012-06-21  Araki Ken  <arakiken@users.sf.net>

	* x_window.[ch]: NoExpose and GraphicsExpose events caused by
	  XCopyArea are processed with wait_copy_area_response flag.

	* x_gc.c, vte.c: Default value of graphics_exposures of GCValue is
	  changed from False to True.

2012-06-13  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_window.c: FocusIn/FocusOut events not only to top windows
	  but also to child ones are processed.
	  (SF Bug #3528838. Thanks to Thomas Wolff)

	* ml_vt100_parser.c: CSI ? 8840 h and CSI ? 8840 l are supported.

	* x_font_config.c: Minor fixes.

2012-06-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, README.cairo: Fixed.

	* x_font_ft.c: If ":percent" is specified in ~/.mlterm/*font, x_off
	  is set to center a character in the cell.

	* x_draw_str.c: If current and next characters are bold or not is checked
	  by the value of ml_char_font() instead of xfont->id.

2012-06-09  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.cairo: Updated.

	* x_screen.c: cursor blinking is stopped in unfocused.

	* xlib/x_font.c, x_font_ft.c, win32/x_font.c, xlib/x_window.c,
	  x_window_cairo.c, x_window_xft.c:
	  - If letter_space is larger than 0, x_off += letter_space / 2 to