@@ -2,7 +2,8 @@ ver 3.1.3
 * Support CSI [>4;2 m and CSI [>4;0m partially.
   (Note that sequence from terminal is CSI [<code>;<mod>u, not CSI [27;<mod>;<code>~.)
 * Support OSC 5;0 and OSC 5;1.
-* Support CSI ? 8840 h and CSI ? 8840 l.
+* Support CSI ? 8840 h, CSI ? 8840 l and CSI ? 8840 n.
+  (see https://docs.google.com/document/d/1Dgq81J0eQEfjq3MR__O7VrbSVnatr9CCqMEITse9psk/edit?pli=1)
 * Support CSI SP q partially.
 * Add "ssh_keepalive_interval" option.
 * Add "ssh_x11_forwarding" option.
